src/app/components/Line page templates/linespages.css
/* Fade in/out animation for line content */
.fade-content {
  opacity: 1;
  transition: opacity 0.5s;
}
.fade-content.fade-exit {
  opacity: 0;
  transition: opacity 0.5s;
}
.homeCell-content{
    position:relative;
}

.red{
  background-color: red;
}

.lineImgContainer{
  position:relative;
  width:100%;
  height:100%;
  overflow: visible;
}

.lineImage {
  position:absolute;
  border: 0.25px solid var(--dark-brown);
  top:0;
  width: 100%;
  height: 100%;
  object-fit: cover;
  display: block;
  overflow: hidden;
}

.lineImage.doubleHeight {
  height: 200%;
  object-fit: cover;
  object-position: center top;
}

.lineImage-small {
  width: 100%;
  height: 100%;
  object-fit: cover;
  object-position: center top;
}

.linedescription{
  font-size:14px;
  line-height: 16px;
  position:absolute;
}

.col2cell{
    width:51.5%;
}

.spacer50{
  height:50%;
}
.spacer50w{
  width:50%;
}

.w100{
  width:100%;
}
.LinePgGridContent{
  
}

.linesPageContent{
  position:relative;
  width:100%;
  height:calc(100% - var(--linesnav-height));
}
.w100h100{
  height:100%;
  width:100%;
}
.linepgTextContent{
    position: absolute;
    top:0;
    left: 0;
    z-index: 100;
    width: 100%;
    height: 100%;
    pointer-events: none;
}
.a1LineHeading{
  height:100%;
  width:100%;
  display:flex;
  flex-direction: column;
  align-items: stretch;
  justify-content: space-between;
  position:absolute;
}

.raligntext{
  text-align: right;
}

.flex4gapcol{
  display: flex;
  flex-direction:column;
  gap:2px;
}

.flexbottom{
  display: flex;
  flex-direction:column;
  justify-content: end;
}

.flexstretch{
  display: flex;
  flex-direction:column;
  justify-content: space-between;
}
/*top nav bar */

.navbar-top-nav {
  width:100%;
  display: flex;
  flex-direction: row;
}

.linesnav{
  z-index: 1000;
  height: var(--linesnav-height);
  display: flex;
  flex-direction: column;
  gap:0px;
  background-color: var(--off-white);
}

.rowempty{
  height:1.2em;
}
.rowcontent{
  height:100%;
  display:flex;
  flex-direction: row;
  gap:0px;
}

.navlinebutton{
  width:100%;
  display:flex;
  flex-direction: row;
  align-items: stretch;
  justify-content: space-between;
}

.w100{
  width:100%;
}

.xs-cell-nav{
  width:5.8%;
}

.xs-cell-navcontent{
  width:1.43%;
}

.navbarNumbers{
  display: flex;
  flex-direction:row;
}

.actNavName{
  font-family: var(--font-feature-display-condensed);
  font-size:20px;
  padding-left: 0.5em;
}

.homeCell-content {
  overflow: visible;
}
.linesPageGrid > .rowGridContent{
  overflow: visible;
}

@media (max-width: 768px) {
  /*grid displaying/hiding*/
  .linespgGrid > .rowGrid > .xs-cell{
    width:5%;
  }
  /* type size */
  .cellContent > .h1{
    font-size: 36px;
  }
  .lineImage{
    position: relative;
  }
}

